# la-hacks-2026

./: .gitignore  README.md  app.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.expo/types/: router.d.ts
Frontend/: pnpm-lock.yaml  pnpm-workspace.yaml
Frontend/TrailSafe/: app.json  package.json  tsconfig.json
Frontend/TrailSafe/app/: _layout.tsx
TrailSafe/: .env.example  AI_BRAIN_CHANGES.md  App.tsx  app.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
TrailSafe/app/: ai.tsx  ar.tsx  download.tsx  home.tsx  index.tsx  lost.tsx  map.tsx  navigate.tsx  sos.tsx
TrailSafe/backend/: .env.example  README.md  pyproject.toml  requirements.txt
TrailSafe/backend/app/: config.py  main.py  schemas.py
TrailSafe/backend/app/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
TrailSafe/src/agent/: cloudModel.ts  index.ts  localModel.ts  survivalAgent.ts  tips.json  useChat.ts
TrailSafe/src/components/: MapScreen.tsx
TrailSafe/src/mobile/: routes.ts  screens.tsx  styles.ts  theme.ts
TrailSafe/src/services/: OfflineManager.ts  POIService.ts
TrailSafe/src/shared/: types.ts
TrailSafe/src/voice/: SurvivalChat.tsx  sosService.ts  voiceService.ts
TrailSafe/src/zetic/: ZeticMLange.ts  modelConfig.ts
app/: _layout.tsx  onboarding.tsx
src/app/: App.tsx
src/app/components/: AIGuideScreen.tsx  ARGuidanceScreen.tsx  HomeScreen.tsx  LostModeScreen.tsx  NavigateScreen.tsx  OnboardingScreen.tsx
src/mobile/: ui.tsx
src_old/styles/: theme.css
(+30 files in other folders)
